# RMNLib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  NOTICE.md  README.md  RMNLibrary.h  TODO.md  test_jcamp_performance.c  test_peak_table.c  test_peak_table_simple.c  test_rtd_build.sh
.github/ISSUE_TEMPLATE/: 00-read-first.md
.github/workflows/: ci.yml
docs/: Doxyfile  README_DOCS.md  api.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: Dataset.rst  Datum.rst  DependentVariable.rst  Dimension.rst  Dimensions.rst  GeographicCoordinate.rst  RMNGridUtils.rst  RMNLibrary.rst  SparseSampling.rst
src/: Dataset.c  Dataset.h  DatasetImage.c  DatasetImage.h  DatasetJCAMP.c  DatasetJCAMP.h  DatasetTecmag.c  DatasetTecmag.h  Datum.c  Datum.h  DependentVariable.c  DependentVariable.h  Dimension.c  Dimension.h  GeographicCoordinate.c  GeographicCoordinate.h  JCAMP.c  NMRSpectroscopy.c  NMRSpectroscopy.h  RMNDataset.c  RMNDataset.h  RMNDatum.c  RMNDatum.h  RMNDimension.c  RMNDimension.h  RMNGridUtils.c  RMNGridUtils.h  RMNIndexes.c  RMNLibrary.c  RMNLibrary.h  SparseSampling.c  SparseSampling.h  parts.c
src/core/: Dataset.c  Dataset.h  Datum.c  Datum.h  DependentVariable.c  DependentVariable.h  DependentVariable.h.backup  Dimension.c  Dimension.h  GeographicCoordinate.c  GeographicCoordinate.h  SparseSampling.c  SparseSampling.h
src/importers/: DatasetImage.c  DatasetImage.h  DatasetJCAMP.h  DatasetTecmag.c  DatasetTecmag.h  Image.c  Image.h  JCAMP.c  JCAMP.h  Tecmag.c  Tecmag.h
src/spectroscopy/: NMRSpectroscopy.c  NMRSpectroscopy.h
src/utils/: RMNGridUtils.c  RMNGridUtils.h
test/: main.c  test_RMNDatum.c
tests/: main.c  test_CSDM.c  test_CSDM.h  test_Dataset.c  test_Dataset.h  test_Datum.c  test_Datum.h  test_DependentVariable.c  test_DependentVariable.h  test_Dimension.c  test_Dimension.h  test_Image.c  test_Image.h  test_JCAMP.c  test_JCAMP.h  test_RMNDatum.c  test_RMNDatum.h  test_SparseSampling.c  test_SparseSampling.h  test_Tecmag.c  test_Tecmag.h  test_minimal_monotonic.c  test_minimal_monotonic.h  test_utils.c  test_utils.h
tests/CSDM-TestFiles-1.0/BubbleNebula/: Bubble.csdfe
tests/CSDM-TestFiles-1.0/BubbleNebula/bubble.csdm/: Bubble.csdfe
tests/CSDM-TestFiles-1.0/EPR/: AmanitaMuscaria_base64.csdf  AmanitaMuscaria_none.csdf  AmanitaMuscaria_raw.csdfe
tests/CSDM-TestFiles-1.0/EPR/AmanitaMuscaria.csdm/: xyinc2_raw.csdfe
tests/CSDM-TestFiles-1.0/GC/: cinnamon_base64.csdf  cinnamon_none.csdf  cinnamon_raw.csdfe  cinnamon_raw_html.csdfe
tests/CSDM-TestFiles-1.0/Illegal file format/: 1.csdf  19.csdf  2.csdf  3.csdf  4.csdf  9.csdfe  missing_quantity_type.csdf  test_CSDMv0.1.py.in
tests/CSDM-TestFiles-1.0/Illegal file format/UV-vis/: benzeneVapour_base64.csdf  benzeneVapour_none.csdf  benzeneVapour_raw.csdfe
tests/CSDM-TestFiles-1.0/MassSpec/: acetone.csdf
tests/CSDM-TestFiles-1.0/NMR/: silica-J-coupling.csdf
tests/CSDM-TestFiles-1.0/TEM/: TEM.csdf
tests/CSDM-TestFiles-1.0/UV-vis/: benzeneVapour_base64.csdf  benzeneVapour_none.csdf  benzeneVapour_raw.csdfe
tests/CSDM-TestFiles-1.0/blank/: blank.csdf
tests/CSDM-TestFiles-1.0/gmsl/: GMSL.csdf  sea_level_none_with_uncertainty.csdf
tests/CSDM-TestFiles-1.0/image/: raccoon_image.csdf  raccoon_raw.csdfe  raccoon_raw_html.csdfe
tests/CSDM-TestFiles-1.0/ir/: caffeine_base64.csdf  caffeine_none.csdf
tests/CSDM-TestFiles-1.0/labeled/: emoji_labeled.csdf  population.csdf
tests/CSDM-TestFiles-1.0/sparse/: iglu_1d.csdf  iglu_2d.csdf
tests/CSDM-TestFiles-1.0/vector/: 1D_vector.csdf
tests/Images/: README.md  create_minimal_images.py  create_test_images.py
tests/JCAMP/: blckpac1.jdx  blckpkt1.jdx  compound.jdx  gh37cj.jdx
tests/JCAMP/EPR/: cosalen.jdx  cosalo2.jdx  xyinc2.jdx  zncosal.jdx
tests/Tecmag/1pulse_WALTZ/: 13C EtOH_90 Ha.tnt  13C EtOH_90 Hb.tnt  13C EtOH_90 waltza.tnt  13C EtOH_90 waltzb.tnt  13C EtOH_90.tnt  1H EtOH_90.tnt  waltz16_45u.tnt
tests/Tecmag/1puse_90calibration/: H90.tnt
tests/Tecmag/APT/: 13C cholesterol_APT.tnt
tests/Tecmag/COSY_States/: 2,3-dibromopropionic acid - proton.tnt
tests/Tecmag/COSY_TPPI/: 2,3-dibromopropionic acid - proton.tnt
tests/Tecmag/COSY_magnitude/: 2,3-dibromopropionic acid - proton.tnt
tests/Tecmag/CP_TPPM/: 13C_histidine_cp.tnt  13C_histidine_cptppm.tnt  13c_adam cp dec85_15dB.tnt  TPPM.tnt
tests/Tecmag/CP_WHH/: 13C_adam_cp_ft.tnt  13C_adam_cp_whh4_ft.tnt  wahuha4.tnt
tests/Tecmag/DEPT-135/: 13C cholesterol_DEPT135.tnt
tests/Tecmag/DEPT-Spectral_Editing/: 13C cholesterol_EditDEPT_H135.tnt  13C cholesterol_EditDEPT_H45.tnt  13C cholesterol_EditDEPT_H90.tnt
tests/Tecmag/HETCOR/: 13Ccrotonate_hetcor_d.tnt  13Ccrotonate_walltz90u.tnt  1H crotonate_d.tnt  PEO 2d exchange.tnt  apollo_homodecoupled_SP.tnt  waltz16_90u.tnt
tests/Tecmag/INEPT/: 13C CHCl3_INEPT.tnt
tests/Tecmag/REDOR/: redor_2k10.tnt
tests/Tecmag/SELTICS/: HMB_cp_rs4k.tnt  HMB_cp_seltics_4k.tnt  Tys_cp_rs4k ft.tnt  tys_cp_seltics_ rs4k_ft.tnt
tests/Tecmag/SolidEcho_F1/: DMB_quadecho_ft.tnt
tests/Tecmag/SolidEcho_muti chs/: DMB_quadecho_ft.tnt  Dgly_quadecho_ft.tnt
tests/Tecmag/T1_F1/: 13Cgly_HT1.tnt
tests/Tecmag/T1_multi chs/: 13Cgly_CT1.tnt  13Cgly_HT1.tnt
tests/Tecmag/T1r_F1/: F1_slH2O_single_res.tnt  HHMBT1r_single_res.tnt
tests/Tecmag/T1r_multi chs/: F1_slH2O_single_res.tnt  HHMBT1r_single_res.tnt  gly_cp_CT1r.tnt
tests/Tecmag/T2part1_F1/: cpmg1_HT2_H2O.tnt
tests/Tecmag/T2part1_multi chs/: cpmg1_HT2_H2O.tnt
tests/Tecmag/TOSS/: HMB_cp.tnt  HMB_cptoss.tnt
(+22 files in other folders)
